--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<!Doctype html>
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My Ugly Game</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container">
-      <button id="startBtn">Click to Start!</button>
-      <h1>game not started</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <script src="script.js" charset="utf-8"></script>
+      <h1>This Is My Ugly Game</h1>
+      <div class="guessingArea">
+          <input type="text" name="guessingBox" id="guessingBox">
+          <input type="submit" value="Click to Start Game" id="gameButton">
+          <button id="colorButton">GIMME SOME LIGHTNING, BABY!</button>
+      </div>
+<div class="resultsArea">
+  <p>Placeholder Text</p>
+</div>
+  <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
